--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,8 @@
   width: auto;
   background-color: lightblue;
 }
+.third_heading{
+  height: auto;
+  width: auto;
+  background-color: lightpink;
+}
